--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 				<a href="Cursos.html">Cursos</a>
 			</li>
 			<li>
-				<a href="#">Nosotros</a>
+				<a href="nosotros.html">Nosotros</a>
 			</li>
 			<li>
-				<a href="#">Contacto</a>
+				<a href="contacto.html">Contacto</a>
 			</li>
 		</ul>
 	</nav>
