--- a/Cursos.html
+++ b/Cursos.html
@@ -17,13 +17,13 @@
 	<nav class="navbar">
 		<ul>
 			<li>
-				<a href="#">Cursos</a>
+				<a href="Cursos.html">Cursos</a>
 			</li>
 			<li>
-				<a href="#">Nosotros</a>
+				<a href="nosotros.html">Nosotros</a>
 			</li>
 			<li>
-				<a href="#">Contacto</a>
+				<a href="contacto.html">Contacto</a>
 			</li>
 		</ul>
 	</nav>
